Cleaning up for import

--- a/tutorial.yaml
+++ b/tutorial.yaml
@@ -1,4 +1,4 @@
-title: Getting Started with Xcode and Playgrounds
+title: "Getting Started with Xcode and Playgrounds - Japanese"
 cover: cover.png
 teaser_text: |
     This tutorial will guide you through making sure your system and Xcode is up to date. It will also introduce you to Swift Playgrounds.
